<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home_blue_24dp"
        />
    <item
        android:title="@string/favorite">
        <menu>
        <item
            android:id="@+id/movie"
            android:title="@string/favorite_movies"
            android:icon="@drawable/ic_movie_black"/>
            <item
                android:id="@+id/tv"
                android:title="@string/favorite_tv_shows"
                android:icon="@drawable/ic_live_tv_black_"/>
        </menu>
    </item>

</menu>