<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragments.DetailMovieFragment">


    <ImageView
        android:id="@+id/image_tv"
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/colorAccent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_show_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/ave"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/tv_show_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/july"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_tv"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_title" />

    <TextView
        android:id="@+id/tv_show_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="76dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_voteAverage"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_release"
        tools:text="@string/average" />

    <TextView
        android:id="@+id/tv_movie_voteAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_tv"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_release"
        tools:text="@string/votes" />

    <TextView
        android:id="@+id/tv_movie_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_votedBy"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_voteAverage"
        tools:text="@string/many" />

    <TextView
        android:id="@+id/tv_movie_votedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_tv"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_voteAverage"
        tools:text="@string/voted" />

    <TextView
        android:id="@+id/tv_movie_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_voteAverage"
        tools:text="@string/people" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        tools:text="@string/overview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_tv" />

    <TextView
        android:id="@+id/tv_show_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Deskripsi"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview" />

    <ProgressBar
        android:id="@+id/progressBarDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_desc" />
</android.support.constraint.ConstraintLayout>